--- a/templates/includes/district_sidebar.html
+++ b/templates/includes/district_sidebar.html
@@ -36,7 +36,7 @@
                 </a>
                 <ul class="collapse submenu">
                     <li><a href="{% url 'presbyters' %}" class="nav-link"><i class="fas fa-user-tie me-2"></i> Presbyters</a></li>
-                    <li><a href="#" class="nav-link"><i class="fas fa-user-tie me-2"></i> Pastors</a></li>
+                    <li><a href="{% url 'district-pastors' %}" class="nav-link"><i class="fas fa-user-tie me-2"></i> Pastors</a></li>
                 </ul>
             </li>
             
