--- a/templates/districts/branches/edit_branch.html
+++ b/templates/districts/branches/edit_branch.html
@@ -1,15 +1,28 @@
-<div class="modal fade" id="editSectionChurchModal{{church.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="editBranchModal{{branch.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5 text-center fw-bold">New Section Church</h1>
+          <h1 class="modal-title fs-5 text-center fw-bold">Edit Church Details</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-            <form action="{% url 'edit-section-church' %}" method="POST" enctype="multipart/form-data">
+            <form action="{% url 'edit-district-church' %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="modal-body">
-                  <input type="hidden" name="church_id" id="church_id" value="{{church.id}}" readonly/>
-                  <div class="row mb-2">
+                  <input type="hidden" readonly id="branch_id" name="branch_id" value="{{branch.id}}" />
+                  <div class="row mb-3">
+                    <div class="col">
+                    <label class="form-label fw-bold">Section</label>
+                    <select class="form-select" id="section" name="section" required>
+                        <option value={{branch.section.id}}>{{branch.section.name}}</option>
+                        {% for section in sections %}
+                          {% if section.id != branch.section.id %}
+                            <option value={{section.id}}>{{section.name}}</option>
+                          {% endif %}
+                         {% endfor %}
+                      </select>
+                  </div>
+                </div>
+                  <div class="row mb-3">
                 <div class="col">
                   <label for="exampleInputPassword1" class="form-label fw-bold">Branch Name</label>
                   <input
@@ -17,13 +30,13 @@
                     class="form-control"
                     id="name"
                     name="name"
-                    value="{{church.name}}"
+                    value="{{branch.name}}"
                     required
                   />
                 </div>
              
                 </div>
-                <div class="row mb-2">
+                <div class="row mb-3">
                   <div class="col">
                     <label for="exampleInputPassword1" class="form-label fw-bold">Town</label>
                     <input
@@ -31,14 +44,14 @@
                       class="form-control"
                       id="town"
                       name="town"
-                      value="{{church.town}}"
+                      value="{{branch.town}}"
                       required
                     />
                   </div>
               
                 </div>
                
-                <div class="row mb-2">
+                <div class="row mb-3">
                   <div class="col">
                     <label for="exampleInputPassword1" class="form-label fw-bold">Branch Location</label>
                       <input
@@ -46,13 +59,13 @@
                         class="form-control"
                         id="location"
                         name="location"
-                        value="{{church.location}}"
+                        value="{{branch.location}}"
                         required
                       />
                   </div>  
                 </div>
                 <div class="text-center mt-3">
-                  <button type="submit" class="btn btn-primary w-30">Edit Section Church</button>
+                  <button type="submit" class="btn btn-primary w-30">Edit Church Details</button>
                 </div>
               </div>
               </form>
